+ _FMCONTENT_TOPIC_OPTIONS
+ _FMCONTENT_TOPIC_OPTIONS_DESC
+ _FMCONTENT_TOPIC_ALIAS
+ _FMCONTENT_ALIAS_TITLE
+ _FMCONTENT_ALIAS_CONTENT
+ _FMCONTENT_ALIAS_TOPIC
+ _FMCONTENT_TOPIC_NUM
+ _FMCONTENT_MSG_ALIASERROR

modinfo.php
+ _FMCONTENT_HOMEPAGE 
+ _FMCONTENT_HOMEPAGE_DESC 
+ _FMCONTENT_HOMEPAGE_1 
+ _FMCONTENT_HOMEPAGE_2 
+ _FMCONTENT_HOMEPAGE_3 
+ _FMCONTENT_HOMEPAGE_4
+ _FMCONTENT_URL_SHORT

* _FMCONTENT_FRIENDLYURL_DESC

- _FMCONTENT_URL_FRIENDLY

1.05
=================================
- Improve blocks (ianez - Voltan) 
- Fix bug in getTopicCount (Voltan)
- Fix menu block for show all contents (Voltan)
- improve all templates (ianez)

1.04
=================================
- Fix error on permissions when there is no topic (Mamba)
- Fix some html errors in templates (Voltan)
- Add page title for pages and topic (Voltan)
- Fix Breadcrumb (ianez - Voltan)
- Fix fmcontent_Url if topic title not exist (Voltan)
- Fix fmcontent_AjaxFilter (ianez - Voltan)
- improve all templates (ianez)

1.03 
=================================
- Fix error if topic not exist (Voltan)
- Fix error FolderHandler in tools.php (Voltan)
- Change $tpl whit $xoopsTpl in admin pages (Voltan)
- Fix fmcontent_Filter function for change capitalized (Voltan)
- Fix topic name in menu block if select static pages (Voltan)
- Rebuild about module page (Voltan)
- Fix error in getContentList function (Voltan)
- Fix list block title in utf-8 languages (Voltan)
- Chage page block setting for select dynamic pages (Voltan)
- Add Breadcrumb (Voltan)

1.02 
=================================
- Rename module from forcontent to fmcontent (For Muss content)
- Fix RSS bug (formuss)
- Add topic name to URL (formuss - voltan)
- Fix pdf and print file URL (formuss)
- Edited backend.php for use this module RSS (Voltan)
- Improve Queries (Voltan)
- Add function for update user posts after add or delete or change status (Voltan)
- Submit page in user side (Voltan)
- Improve templates(Voltan)