@@ -56,10 +56,10 @@ if (!defined('_FMCONTENT_PREFERENCES')) {
     define('_FMCONTENT_TOPIC_SHOWCOMS', 'Display Comments count');
     define('_FMCONTENT_TOPIC_HOMEPAGE', 'Topic homepage seting');
     define('_FMCONTENT_TOPIC_HOMEPAGE_DESC', 'Seting content show type in topic pages');
-    define('_FMCONTENT_TOPIC_HOMEPAGE_1', 'List all contents from all topics');
-    define('_FMCONTENT_TOPIC_HOMEPAGE_2', 'List all topics');
-    define('_FMCONTENT_TOPIC_HOMEPAGE_3', 'List all static pages');
-    define('_FMCONTENT_TOPIC_HOMEPAGE_4', 'Show selected static content');
+    define('_FMCONTENT_TOPIC_HOMEPAGE_1', 'List all contents from this topic and subtopics');
+    define('_FMCONTENT_TOPIC_HOMEPAGE_2', 'List all subtopics');
+    define('_FMCONTENT_TOPIC_HOMEPAGE_3', 'List all contents from just this topic');
+    define('_FMCONTENT_TOPIC_HOMEPAGE_4', 'Show selected content from this topic');
     define('_FMCONTENT_TOPIC_OPTIONS', 'Sellect topic show options');
     define('_FMCONTENT_TOPIC_OPTIONS_DESC', 'Sellect topic show options');
     define('_FMCONTENT_TOPIC_ALIAS', 'Alias (for url)');
